# pipcleaner

./: README.md  pyproject.toml
pipcleaner/: main.py
